--- a/style.css
+++ b/style.css
@@ -15,24 +15,27 @@ body {
   
   .numero {
     display: inline-block;
-    background-color: #3498db;
-    color: white;
+    background-color: #178545; 
+    border: 15px solid #178545; 
+    color: #178545;            
+    background-clip: content-box;
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    line-height: 50px;
+    line-height: 44px;
     text-align: center;
     margin: 5px;
     font-weight: bold;
-    font-size: 18px;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+    font-size: 40px;
+    background-color: white; 
+    box-shadow: 0 0 0 3px #178545; 
   }
   
   button {
     margin-top: 20px;
     padding: 10px 25px;
     font-size: 16px;
-    background-color: #2ecc71;
+    background-color: #178545;
     color: white;
     border: none;
     border-radius: 8px;
