--- a/style.css
+++ b/style.css
@@ -61,3 +61,19 @@ body {
         inset 0 0 8px rgba(0, 0, 0, 0.08);
     }
   }
+
+  @keyframes girarEntrando {
+    0% {
+      transform: rotateY(360deg) scale(0);
+      opacity: 0;
+    }
+    100% {
+      transform: rotateY(0deg) scale(1);
+      opacity: 1;
+    }
+  }
+  
+  .numero {
+    animation: girarEntrando 0.5s ease-out forwards;
+    opacity: 0;
+  }
